deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-frontend
  labels:
    app: udagram-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udagram-frontend
  template:
    metadata:
      labels:
        app: udagram-frontend
    spec:
      containers:
      - name: udagram-frontend
        image: theresmith/udagram-frontend
        ports:
        - containerPort: 80
