service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udagram-frontend
  name: udagram-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    service: udagram-frontend
